CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

MESSAGE(STATUS "POINTER TEST GENERATING")

PROJECT( pointerTest )

SET( CMAKE_BUILD_TYPE "Debug")
SET( OUTCOME_PATH ${CMAKE_BINARY_DIR}/product )

IF ( NOT CMAKE_MODULE_PATH )
    SET( CMAKE_MODULE_PATH ${CMAKE_BINARY_DIR}/../../../cmake )
ENDIF ( NOT CMAKE_MODULE_PATH )

SET( POINTER_TEST_DIR ${CMAKE_SOURCE_DIR})

SET( RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/tests )

SET ( pointerTest_SRCS
      ${POINTER_TEST_DIR}/main.cpp
    )

SET ( pointerTest_HDRS
      ${POINTER_TEST_DIR}/init.h
    )

ADD_EXECUTABLE ( pointerTest
                 ${pointerTest_SRCS}
                 ${pointerTest_HDRS}
               )
IF( UNIX )
ELSEIF( WIN32 )
    SET_TARGET_PROPERTIES( pointerTest PROPERTIES LINK_FLAGS_DEBUG "/SUBSYSTEM:windows")
    SET_TARGET_PROPERTIES( pointerTest PROPERTIES COMPILE_DEFINITIONS_DEBUG "_CONSOLE")
    SET_TARGET_PROPERTIES( pointerTest PROPERTIES LINK_FLAGS_RELWITHDEBINFO "/SUBSYSTEM:windows")
    SET_TARGET_PROPERTIES( pointerTest PROPERTIES COMPILE_DEFINITIONS_RELWITHDEBINFO "_CONSOLE")
    SET_TARGET_PROPERTIES( pointerTest PROPERTIES LINK_FLAGS_RELEASE "/SUBSYSTEM:windows")
    SET_TARGET_PROPERTIES( pointerTest PROPERTIES LINK_FLAGS_MINSIZEREL "/SUBSYSTEM:windows")
    SET_TARGET_PROPERTIES( pointerTest PROPERTIES COMPILE_DEFINITIONS _UNICODE,UNICODE)
ENDIF()

MESSAGE( STATUS "----------- BINARY:")
MESSAGE( ${CMAKE_BINARY_DIR})
MESSAGE( STATUS "----------- SOURCE:")
MESSAGE( ${CMAKE_SOURCE_DIR})
MESSAGE( STATUS "----------- MODULE:")
MESSAGE( ${CMAKE_MODULE_PATH})
MESSAGE( STATUS "----------- OUTCOME:")
MESSAGE( ${OUTCOME_PATH})

INSTALL ( TARGETS pointerTest
            DESTINATION ${OUTCOME_PATH}
        )
